foundryvtt-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: foundryvtt
  name: foundryvtt
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: foundryvtt
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: foundryvtt
    spec:
      containers:
      - image: corvimae/foundryvtt:latest
        imagePullPolicy: Always
        name: foundryvtt
        ports:
        - containerPort: 30000
        resources: {}
        volumeMounts:
        - mountPath: /home/foundry/data
          name: foundryvtt-data
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: foundryvtt-data
        persistentVolumeClaim:
          claimName: foundryvtt-data
status: {}
