foundryvtt-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: foundryvtt
  name: foundryvtt
spec:
  ports:
  - name: "30000"
    port: 30000
    targetPort: 30000
  selector:
    io.kompose.service: foundryvtt
status:
  loadBalancer: {}
