foundryvtt-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: foundryvtt-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - mysite.com
    secretName: foundryvtt-tls
  rules:
  - host: mysite.com
    http:
      paths:
      - backend:
          serviceName: foundryvtt
          servicePort: 30000
